--- a/app/templates/tarieven.html
+++ b/app/templates/tarieven.html
@@ -21,12 +21,11 @@
             <div class="card-item__content">
                 <h1 class="card-item__title" style="margin-bottom: 5px;">{{ _('DAGPAS') }}</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
-                <p class="card-item__text">{{ _('lorum ipsum and all that good stuff. We got tarifs, we got bikes!') }}<br>
-                {{ _('What more could you need? What I need right now is more text here.') }}<br>
-                {{ _('I could just put lorum ipsum here but that’s boring.') }}<br>
-                {{ _('Nothing beats a good copywriting in the morning, yup.') }}<br>
-                {{ _('Whoever is reading this, I\'m sorry for wasting 3 minutes of your time.') }}<br>
-                {{ _('But thanks anyways! :D') }}</p>
+                <p class="card-item__text">{{ _('24 uur toegang tot de Velo-fietsen!') }}<br>
+                {{ _('Al jouw ritten van 30 minuten inbegrepen.') }}<br>
+                {{ _('Plaats een fiets na elke rit terug in een Velo-station naar keuze.') }}<br>
+                {{ _('Een rit start van het moment je een fiets krijgt toegewezen in een Velo-station, ') }}<br>
+                {{ _('en eindigt bij registratie van jouw fiets in een Velo-station.') }}<br></p>
                 <a href="/tarieven/dagpas"><button class="card-slider__button">{{ _('KOOP NU') }}</button></a>
             </div>
         </li>
@@ -35,12 +34,11 @@
             <div class="card-item__content">
                 <h1 class="card-item__title" style="margin-bottom: 5px;">{{ _('WEEKPAS') }}</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
-                <p class="card-item__text">{{ _('lorum ipsum and all that good stuff. We got tarifs, we got bikes!') }}<br>
-                {{ _('What more could you need? What I need right now is more text here.') }}<br>
-                {{ _('I could just put lorum ipsum here but that’s boring.') }}<br>
-                {{ _('Nothing beats a good copywriting in the morning, yup.') }}<br>
-                {{ _('Whoever is reading this, I\'m sorry for wasting 3 minutes of your time.') }}<br>
-                {{ _('But thanks anyways! :D') }}</p>
+                <p class="card-item__text">{{ _('Een week toegang tot de Velo-fietsen!') }}<br>
+                {{ _('Al jouw ritten van 30 minuten inbegrepen.') }}<br>
+                {{ _('Plaats een fiets na elke rit terug in een Velo-station naar keuze.') }}<br>
+                {{ _('Een rit start van het moment je een fiets krijgt toegewezen in een Velo-station, ') }}<br>
+                {{ _('en eindigt bij registratie van jouw fiets in een Velo-station.') }}<br></p>
                 <a href="/tarieven/weekpas"><button class="card-slider__button">{{ _('KOOP NU') }}</button></a>
             </div>
         </li>
@@ -49,12 +47,11 @@
             <div class="card-item__content">
                 <h1 class="card-item__title" style="margin-bottom: 5px;">{{ _('JAARKAART') }}</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
-                <p class="card-item__text">{{ _('lorum ipsum and all that good stuff. We got tarifs, we got bikes!') }}<br>
-                {{ _('What more could you need? What I need right now is more text here.') }}<br>
-                {{ _('I could just put lorum ipsum here but that’s boring.') }}<br>
-                {{ _('Nothing beats a good copywriting in the morning, yup.') }}<br>
-                {{ _('Whoever is reading this, I\'m sorry for wasting 3 minutes of your time.') }}<br>
-                {{ _('But thanks anyways! :D') }}</p>
+                <p class="card-item__text">{{ _('Een jaar lang toegang tot de Velo-fietsen!') }}<br>
+                {{ _('Al jouw ritten van 30 minuten inbegrepen.') }}<br>
+                {{ _('Plaats een fiets na elke rit terug in een Velo-station naar keuze.') }}<br>
+                {{ _('Een rit start van het moment je een fiets krijgt toegewezen in een Velo-station, ') }}<br>
+                {{ _('en eindigt bij registratie van jouw fiets in een Velo-station.') }}<br></p>
                 <a href="/tarieven/jaarkaart"><button class="card-slider__button">{{ _('KOOP NU') }}</button></a>
             </div>
         </li>
