--- a/app/templates/contact_bevestiging.html
+++ b/app/templates/contact_bevestiging.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Contactbevestiging{% endblock %}
+{% block title %}{{ _('Contactbevestiging') }}{% endblock %}
 
 {% block head %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/contact_bevestiging.css') }}">
@@ -9,11 +9,11 @@
 {% block content %}
 <div class="card-slider">
   <div class="card-item">
-    <h2 class="card-item__title">📩 Bedankt voor je bericht!</h2>
-    <p>We hebben je bericht goed ontvangen en nemen zo snel mogelijk contact met je op.</p>
+    <h2 class="card-item__title">📩 {{ _('Bedankt voor je bericht!') }}</h2>
+    <p>{{ _('We hebben je bericht goed ontvangen en nemen zo snel mogelijk contact met je op.') }}</p>
 
-    <a href="/" class="terug-btn">🏠 Terug naar startpagina</a>
-    <a href="{{ url_for('routes.contact') }}" class="terug-btn">📨 Stuur een nieuw bericht</a>
+    <a href="/" class="terug-btn">🏠 {{ _('Terug naar startpagina') }}</a>
+    <a href="{{ url_for('routes.contact') }}" class="terug-btn">📨 {{ _('Stuur een nieuw bericht') }}</a>
   </div>
 </div>
 {% endblock %}
