fiets inhuren toegevoegd en hamburger menu aangepast

--- a/app/templates/maps.html
+++ b/app/templates/maps.html
@@ -85,6 +85,8 @@
                 ${marker.name}<br>
                 <img src='/static/images/bike.png' alt='bike' style='height: 16px; vertical-align: middle;'> ${marker['free-bikes']}
                 <img src='/static/images/lock-icon.png' alt='lock' style='height: 16px; vertical-align: middle;'> ${marker['empty-slots']}
+                <br>
+                <button class="btn-huren">Fiets inhuren</button>
             `;
         }
 
