--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -377,7 +377,7 @@ body.dark-mode .dark-toggle-btn:hover {
 }
 
 /* ====== Responsive Design ======= */
-@media (max-width: 1135px) {
+@media (max-width: 1150px) {
   .nav-links {
     position: fixed;
     top: 56px;
@@ -393,6 +393,7 @@ body.dark-mode .dark-toggle-btn:hover {
 
   .nav-links.open {
     max-height: 500px;
+    width: 20rem;
     transition: max-height 0.3s ease-in;
   }
 
