--- a/app/static/css/maps.css
+++ b/app/static/css/maps.css
@@ -91,6 +91,12 @@ body.dark-mode #search-container button:hover {
     cursor: pointer;
 }
 
+.btn-huren{
+    padding: 5px 10px 5px 10px;
+    margin-top: 5px;
+    font-size: 14px;
+}
+
 #show-all-container button:hover {
     border-color: #D41444;
     color: #D41444;
